feat(frontend): coin balance display, min validation, and login UX fixes (#44)
* feat(frontend): add global http error interceptor

* fix(frontend): rename coinView to boolean showCoinIcon and fix stale header binding